kubernetes/production/home-assistant/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    secrets-injection: enabled
