kubernetes/production/home-assistant/home-assistant.yml
apiVersion: v1
kind: Service
metadata:
  namespace: home-assistant
  name: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
  - port: 8123
    name: console
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-assistant
  name: home-assistant
  labels:
    app: home-assistant
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
#      securityContext:
#        fsGroup: 33
#        fsGroupChangePolicy: "OnRootMismatch"
      containers:
      - name: home-assistant-app
        image: "ghcr.io/home-assistant/home-assistant:2022.12.1"
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: null
        ports:
          - name: http
            containerPort: 8123
            protocol: TCP
        resources: {}
        livenessProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 0
          failureThreshold: 30
          timeoutSeconds: 1
          periodSeconds: 5
        volumeMounts:
          - name: ha-config-root
            mountPath: /config

          - mountPath: /config/configuration.yaml
            subPath: configuration.yaml
            name: configmap-file
          - mountPath: /config/automations.yaml
            subPath: automations.yaml
            name: configmap-file
      restartPolicy: Always
      volumes:
        - name: ha-config-root
          persistentVolumeClaim:
            claimName: home-assistant-config-root
        - name: configmap-file
          configMap:
            name: home-assistant-config
