kubernetes/production/home-assistant/mosquitto.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: home-assistant
  name: mosquitto
  labels:
    app: mosquitto
spec:
  type: ClusterIP
  ports:
  - port: 1883
    targetPort: mqtt
    protocol: TCP
    name: mqtt
  selector:
    app: mosquitto
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-assistant
  name: mosquitto
  labels:
    app: mosquitto
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: "eclipse-mosquitto:2.0.18"
          imagePullPolicy: IfNotPresent
          ports:
            - name: mqtt
              containerPort: 1883
              protocol: TCP
          volumeMounts:
            - name: mosquitto-data
              mountPath: /mosquitto/data
            - name: mosquitto-conf
              mountPath: /mosquitto/config
          livenessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 60
          readinessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 60
          startupProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: mosquitto-data
          persistentVolumeClaim:
            claimName: mosquitto-data
        - name: mosquitto-conf
          configMap:
            name: mosquitto-conf
