kubernetes/production/home-assistant/gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home.debens.app
  namespace: home-assistant
  annotations:
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header    Upgrade     $http_upgrade;
      proxy_set_header    Connection  $connection_upgrade;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - home.debens.app
      secretName: tls-ingress-http
  rules:
    - host: home.debens.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port: 
                  name: console
